--- a/requirements.txt
+++ b/requirements.txt
@@ -8,13 +8,17 @@ constantly==23.10.4
 cryptography==42.0.2
 daphne==4.0.0
 Django==5.0.1
+django-environ==0.11.2
+djangorestframework==3.14.0
 hyperlink==21.0.0
 idna==3.6
 incremental==22.10.0
+psycopg==3.1.18
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
 pycparser==2.21
 pyOpenSSL==24.0.0
+pytz==2024.1
 service-identity==24.1.0
 six==1.16.0
 sqlparse==0.4.4
