--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ constantly==23.10.4
 cryptography==42.0.2
 daphne==4.0.0
 Django==5.0.1
+django-cors-headers==4.3.1
 django-environ==0.11.2
 djangorestframework==3.14.0
 hyperlink==21.0.0
